# citemind

./: .gitignore  app.py  layout.py  main.py  pyproject.toml  readme.md  requirements.txt  validate.py
_legacy_dash/callbacks/: chat_callbacks.py  selection_callbacks.py  slide_callbacks.py
agent/: agent_logger.py  graph.py  llm_utils.py  nodes.py  prompts.py  readme.md
api/: chat.py  citations.py  slides.py  upload.py
assets/: readme.md  style.css  style.css.bak
callbacks/: chat_callbacks.py  citation_callbacks.py  readme.md  selection_callbacks.py  slide_callbacks.py
components/: chat_panel.py  citation_panel.py  excel_strip.py  readme.md  slide_panel.py
db/: connection.py  queries.py  readme.md  schema.sql
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  Header.tsx  LeftPanel.tsx  SlideCanvas.tsx  UploadRow.tsx
frontend/src/hooks/: useShapes.ts
frontend/src/utils/: emu.ts
parsers/: pptx_parser.py  readme.md  slide_renderer.py  xlsx_parser.py
utils/: pptx_parser.py  readme.md  xlsx_parser.py
utils/ingestion_service/: data_service.py  datetime_util.py  processed_registry.py  standard_data_pipeline.py
