[project]
name = "citemind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28.0",
    "fastapi>=0.111.0",
    "langchain-anthropic>=0.1.15",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "ollama>=0.6.1",
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "python-pptx>=0.6.23",
    "uvicorn>=0.30.1",
]
